   these functions now push [number index, string name, ...] rather than [string name, ...]
   onto the stack
 ! change DefaultCommand call order
    previously widgets were called first, and if they returned anything, gadgets weren't called at all
    now gadgets are called first, then widgets are always called and can override
 - add a 3rd param to DefaultCommand callin: the current default command
    works with the above: gadgets receive the default engine cmd,
    widgets then receive what gadgets returned (possibly engine default)
 - add Spring.GetGlobalLos(allyTeamID) -> bool to LuaSyncedRead
 - add Spring.IsNoCostEnabled() -> bool to LuaSyncedRead
 - add Spring.GetLuaMemUsage to LuaUnsyncedRead
   returns the number of (kilo-)bytes used and (kilo-)allocations performed
   by the calling Lua state individually, as well as by all states globally
 - add Spring.GetVidMemUsage to LuaUnsyncedRead
 - add DrawSky and DrawSun callins; available when a map has no skybox defined
 - add DrawWater callin
 - add DrawTrees callin (enabled by /drawtrees 2; supersedes engine rendering)
 - make gl.Feature{Raw} able to draw default trees
   if drawing multiple trees in a row, use gl.Feature(treeID, true, false)
   for the *first* tree and gl.Feature(treeID, false, true) for the *last*
   [more efficient; call gl.Feature(treeID, true, true) to render a single
   tree with default state]
 - remove gl.Light, gl.Lighting, gl.Material, gl.ShadeModel
 - remove gl.Fog, gl.FogCoord, gl.SecondaryColor
 - remove gl.PointSize, gl.PointSprite, gl.PointParameter
 - remove gl.TexEnv, gl.MultiTexEnv, gl.TexGen, gl.MultiTexGen
 - remove gl.CreateList, gl.CallList, gl.DeleteList
 - remove gl.DrawListAtUnit
 - remove {Unit,Feature}Rendering.{SetPieceList,SetMaterialDisplayLists}
 - remove LuaMaterial {pre,post}list
 - support local-space tracking for dynamic lights added via Spring.Add{Map,Model}Light
   the light-definition table should contain a 'localSpace = true' entry to enable this